# example_mlops

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cloudbuild_containers.yaml  cloudbuild_deploy_model.yaml  cloudbuild_vertex_train.yaml  data.dvc  data.py  main.py  model.py  predict.dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tasks.py  train.dockerfile
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: build_containers.yaml  code_formatting.yaml  data_checker.yaml  deploy_model.yaml  stage_model.yaml  tests_and_build.yaml  testworkflow.yaml  type_checking.yaml  unittests.yaml
configs/: app.yaml  common.yaml  data.yaml  evaluate.yaml  sweep.yaml  train.yaml
configs/gcp/: vertex_cpu.yaml
data/: example_images.npy
dockerfiles/: app.dockerfile  base.dockerfile
docs/: Makefile  conf.py  index.rst  make.bat  mkdocs.yaml
docs/source/: index.md
gcp/: cloudbuild_containers.yaml  cloudbuild_deploy_model.yaml  cloudbuild_vertex_train.yaml  vertex_cpu.yaml  vertex_gpu.yaml
src/data/: make_dataset.py
src/example_mlops/: app.py  data.py  evaluate.py  frontend.py  model.py  model_management.py  train.py  utils.py  visualize.py
src/models/: model.py  predict_model.py  train_model.py
src/visualization/: visualize.py
temp/: README.md
tests/loadtests/: __init__.py
tests/performance/: locustfile.py  test_model_inference.py
tests/unittests/: __init__.py  test_app.py  test_data.py  test_evaluate.py  test_model.py  test_train.py  test_utils.py
