[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
]

[project]
name = "example-mlops"
version = "0.0.1"
description = "An example mlops repository"
authors = [
    { name = "Nicki Skafte Detlefsen", email = "nsde@dtu.dk" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dynamic = [
  "dependencies",
  "optional-dependencies",
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[project.scripts]
data = "example_mlops.data:preprocess_data"
evaluate = "example_mlops.evaluate:evaluate_model"
model_management = "example_mlops.model_management:cli"
train = "example_mlops.train:train_model"
[tool.coverage.run]
source=["example_mlops"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["A", "D", "E", "F", "I", "N", "W", "RUF", "PLE"]
ignore = ["D100", "D203", "D104", "D212", "D401", "E731"]

[tool.ruff.lint.pydocstyle]
convention = "google"
